@@ -1,5 +1,6 @@
 Revision history for HTML::StateTable
 
+          - Moved onReady function to utils
           - Rationalised JS package names
           - Renames JS files
           - Uses icons. Moves utf8 default characters to JS
